# revault-gui

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
contrib/: coverage.sh  revault_gui.toml
contrib/tools/dummysigner/: Cargo.toml  README.md
contrib/tools/dummysigner/examples/: client.rs  examples_cfg.toml  manager_client.rs  stakeholder_batch.rs  stakeholder_client.rs
contrib/tools/dummysigner/src/: api.rs  app.rs  config.rs  main.rs  server.rs  sign.rs  view.rs
doc/: DEMO.md  DEMO_TESTNET.md
hwi/: Cargo.toml
hwi/src/: dummysigner.rs  lib.rs  specter.rs
hwi/src/app/: mod.rs  revault.rs
src/: app.rs  conversion.rs  lib.rs  loader.rs  main.rs  revault.rs  revaultd.rs
src/app/: config.rs  context.rs  error.rs  hw.rs  menu.rs  message.rs  mod.rs
src/app/component/: icon.rs  mod.rs
src/app/state/: charging.rs  cmd.rs  deposit.rs  emergency.rs  history.rs  manager.rs  mod.rs  revault.rs  settings.rs  sign.rs  spend_transaction.rs  stakeholder.rs  vault.rs  vaults.rs
src/app/view/: charging.rs  deposit.rs  emergency.rs  history.rs  home.rs  layout.rs  manager.rs  mod.rs  network.rs  revault.rs  settings.rs  sidebar.rs  sign.rs  spend_transaction.rs  stakeholder.rs  vault.rs  vaults.rs  warning.rs
src/app/view/settings/: boxes.rs  mod.rs
src/daemon/: config.rs  embedded.rs  mod.rs  model.rs
src/daemon/client/: error.rs  jsonrpc.rs  mod.rs
src/hw/: dummysigner.rs  mod.rs  specter.rs
src/installer/: config.rs  message.rs  mod.rs  view.rs
src/installer/step/: common.rs  manager.rs  mod.rs  stakeholder.rs
src/revaultd/: config.rs  mod.rs  model.rs
src/revaultd/client/: error.rs  mod.rs
src/ui/: app.rs  color.rs  config.rs  error.rs  icon.rs  image.rs  menu.rs  message.rs  mod.rs  state.rs  view.rs
src/ui/component/: badge.rs  button.rs  font.rs  form.rs  icon.rs  image.rs  mod.rs  text.rs
src/ui/ds/: image.rs
src/ui/state/: charging.rs  cmd.rs  deposit.rs  history.rs  installing.rs  manager.rs  mod.rs  settings.rs  sign.rs  spend_transaction.rs  stakeholder.rs  util.rs  vault.rs  vaults.rs
src/ui/view/: charging.rs  deposit.rs  history.rs  home.rs  installing.rs  layout.rs  manager.rs  mod.rs  network.rs  sidebar.rs  sign.rs  spend_transaction.rs  stakeholder.rs  vault.rs  vaults.rs
src/ui/view/settings/: boxes.rs  mod.rs
tests/: app.rs  app_manager.rs  app_revault.rs  app_stakeholder.rs
tests/utils/: fixtures.rs  mock.rs  mod.rs  sandbox.rs
ui/: Cargo.toml
ui/examples/: txflowchart.rs
ui/src/: chart.rs  color.rs  icon.rs  lib.rs  util.rs
ui/src/component/: badge.rs  button.rs  collapse.rs  form.rs  image.rs  mod.rs  notification.rs  text.rs
