[package]
name = "revault-gui"
version = "0.0.1"
readme = "README.md"
description = "Revault GUI"
repository = "https://github.com/re-vault/revault-gui"
license = "BSD-3-Clause"
authors = ["Edouard Paris <m@edouard.paris>"]
edition = "2018"

[workspace]
members = [
  "ui", 
  "hwi"
]

[[bin]]
name = "revault-gui"
path = "src/main.rs"

[dependencies]
bitcoin = { version = "0.27", features = ["base64", "use-serde"] }
revault_tx = "0.3.0"

iced = { version = "0.3", default-features= false, features = ["tokio", "wgpu", "svg", "qr_code"] }
revault_ui = { path = "./ui" }
revault_hwi = { path = "./hwi" }

tokio = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = "0.2"

dirs = "3.0.1"
toml = "0.5"

chrono = "0.4"

[target.'cfg(windows)'.dependencies]
uds_windows = "0.1.5"

[dev-dependencies]
async-recursion = "0.2"
tokio = {version = "1.9.0", features = ["rt", "macros"]}
