[package]
name = "revault-gui"
version = "0.0.1"
readme = "README.md"
description = "Revault GUI"
repository = "https://github.com/re-vault/revault-gui"
license = "BSD-3-Clause"
authors = ["Edouard Paris <m@edouard.paris>"]
edition = "2018"

[workspace]
members = [
  "ui", 
  "hwi"
]

[[bin]]
name = "revault-gui"
path = "src/main.rs"

[features]
default = ["daemon"]
daemon = ["revaultd"]

[dependencies]
bitcoin = { version = "0.27", features = ["base64", "use-serde"] }
revaultd = { version = "0.3", optional = true}
backtrace = "0.3"

iced = { version = "0.3", default-features= false, features = ["tokio", "wgpu", "svg", "qr_code"] }
revault_ui = { path = "./ui" }
revault_hwi = { path = "./hwi" }
iced_native = "0.4"

tokio = {version = "1.9.0", features = ["signal"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging stuff
log = "0.4"
fern = "0.6"

dirs = "3.0.1"
toml = "0.5"

chrono = "0.4"

[target.'cfg(windows)'.dependencies]
uds_windows = "0.1.5"

[dev-dependencies]
async-recursion = "0.2"
tokio = {version = "1.9.0", features = ["rt", "macros"]}
