[package]
name = "revault-gui"
version = "0.3.0"
readme = "README.md"
description = "Revault GUI"
repository = "https://github.com/revault/revault-gui"
license = "BSD-3-Clause"
authors = ["Edouard Paris <m@edouard.paris>", "Daniela Brozzoni <danielabrozzoni@protonmail.com>"]
edition = "2018"
resolver = "2"

[workspace]
members = [
  "ui", 
  "hwi"
]

[[bin]]
name = "revault-gui"
path = "src/main.rs"

[dependencies]
bitcoin = { version = "0.27", features = ["base64", "use-serde"] }
revaultd = { git = "https://github.com/revault/revaultd", branch = "master", default-features = false}
backtrace = "0.3"

iced = { git = "https://github.com/iced-rs/iced", branch = "0.4", default-features= false, features = ["tokio", "wgpu", "svg", "qr_code"] }
iced_native = { git = "https://github.com/iced-rs/iced", branch = "0.4"}
revault_ui = { path = "./ui" }
revault_hwi = { path = "./hwi" }

tokio = {version = "1.9.0", features = ["signal"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging stuff
log = "0.4"
fern = "0.6"

dirs = "3.0.1"
toml = "0.5"

chrono = "0.4"

[target.'cfg(windows)'.dependencies]
uds_windows = "0.1.5"

[dev-dependencies]
async-recursion = "0.2"
tokio = {version = "1.9.0", features = ["rt", "macros"]}
