[package]
name = "revault_hwi"
version = "0.1.0"
description = "Hardware wallet interface for Revault GUI"
repository = "https://github.com/revault/revault-gui"
license = "BSD-3-Clause"
authors = ["Edouard Paris <m@edouard.paris>", "Daniela Brozzoni <danielabrozzoni@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
bitcoin = { version = "0.27", features = ["base64", "use-serde"] }

log = "0.4"

tokio = {version = "1.9.0", features = ["net", "io-util"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-serde = {version = "0.8", features = ["json"]}
tokio-serial = "5.4.1"
serialport = "4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
