[package]
name = "revault_hwi"
version = "0.1.0"
description = "Hardware wallet interface for Revault GUI"
repository = "https://github.com/revault/revault-gui"
license = "BSD-3-Clause"
authors = ["Edouard Paris <m@edouard.paris>", "Daniela Brozzoni <danielabrozzoni@protonmail.com>"]
edition = "2018"

[features]
default = ["revault", "dummysigner", "specter"]
revault = []
dummysigner = ["log", "tokio", "tokio-util", "tokio-serde", "serde", "serde_json"]
specter = ["tokio", "tokio-serial", "serialport"]

[dependencies]
async-trait = "0.1.52"
futures = "0.3"
bitcoin = { version = "0.27", features = ["base64", "use-serde"] }


# dummysigner
# specter
tokio = { version = "1.9.0", features = ["net", "io-util"], optional = true }

# dummysigner
log = { version = "0.4", optional = true }
tokio-util = { version = "0.6", features = ["codec"], optional = true }
tokio-serde = {version = "0.8", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version ="1.0", optional = true }

# specter
tokio-serial = { version = "5.4.1", optional = true }
serialport = { version = "4", optional = true }

