[package]
name = "revault_ui"
version = "0.1.0"
description = "Iced components for Revault GUI"
repository = "https://github.com/revault/revault-gui"
license = "BSD-3-Clause"
authors = ["Edouard Paris <m@edouard.paris>", "Daniela Brozzoni <danielabrozzoni@protonmail.com>"]
edition = "2018"

[dependencies]
iced = { version = "0.3", default-features= false, features = ["wgpu", "svg"] }
