[package]
name = "dummysigner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
revault_tx = { git = "https://github.com/revault/revault_tx", features = ["use-serde"] }
base64 = "0.13.0"
iced = {version = "0.3", features = ["tokio"]}
iced_futures = "0.3.0"
iced_native = "0.4.0"
tokio = {version = "1.9.0", features = ["net", "io-util"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-serde = {version = "0.8", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
futures = "0.3"
tokio = {version = "1.9.0", features = ["macros", "net", "io-util"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-serde = {version = "0.8", features = ["json"]}
serde_json = "1"


